Sun Jan  9 14:51:43 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/t0018.c: improved from #1088672

Sun Jan  9 14:24:44 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c src/tds/convert.c:
	- fix output parameter on mssql

Fri Jan  7 11:56:52 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/unittests/t0002.c
	- SYBVARBINARY  and patch #1083180

Fri Dec  7 13:49:56 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/sql2tds.c: update logging

Thu Jan  6 23:44:59 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/rpc.c correct rpc unittest

Thu Jan  6 15:13:56 EST 2005	JK Lowden <jklowden@schemamania.org>
	* doc/tds.html src/dblib/unittests/README updated docs

Wed Jan  5 22:07:07 EST 2005	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h src/dblib/dblib.c src/dblib/rpc.c
	- Patch 1095806 by Bill Thompson
	- PRINT packets handled correctly (do not yield stale metadata).

Fri Dec 31 14:15:28 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c use getopt(3)
	* src/dblib/bcp.c firstrow and lastrow are independent

Wed Dec 22 21:09:47 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c: fix memory leak reported by Brad Rittenhouse

Fri Dec 17 10:54:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c src/dblib/dblib.c src/odbc/connectparams.c:
	* src/replacements/iconv.c src/tds/config.c:
	* src/tds/token.c:
	- update logging string

Fri Dec 17 01:36:33 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/dbutil.c src/tds/token.c
	- route PRINT messages (e.g. EED packets) to client msg handler.

Thu Dec 16 21:05:55 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/pool/member.c src/pool/user.c
	- allow compiling pool without MSG_NOSIGNAL

Wed Dec 15 16:02:55 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/replacements/Makefile.am: include new files in distro